--- a/random-quote-machine/package.json
+++ b/random-quote-machine/package.json
@@ -2,7 +2,7 @@
   "name": "random-quote-machine",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/TrentSPalmer/fcc-challenges/tree/gh-pages/random-quote-machine/build",
+  "homepage": "https://trentspalmer.github.io/fcc-challenges/random-quote-machine/build/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
